test/libsolidity/syntaxTests/storageLayoutSpecifier/assignment.sol
contract C layout at 1 = 2 { }
// ----
// TypeError 4247: (21-22): Expression has to be an lvalue.
// TypeError 7407: (25-26): Type int_const 2 is not implicitly convertible to expected type int_const 1.
